Bug 1652546 - Disable mozStorage exclusive lock fallback for file URIs. r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D83636